z-index fixed

--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -17,6 +17,7 @@
   //Rotate into X with menu lines
   &.close {
 transform: rotate(180deg);
+position: fixed;
 
 .btn-line{
   //Line 1 - Rotate
@@ -37,15 +38,16 @@ transform: rotate(180deg);
 }
 // Menu
 .menu {
+
   position: fixed;
   top:0;
-  width: 100%;
+  width: 101%;
   opacity: 0.9;
   visibility: hidden;
   z-index: 10;
   &.show {
     visibility: visible;
-  }
+     }
   &-image,&-nav {
     display:flex;
     flex-flow: column wrap;
