--- a/src/scss/_paralax.scss
+++ b/src/scss/_paralax.scss
@@ -27,7 +27,7 @@ z-index: 1;
     }
    
     .text {
-        z-index: 10;
+        z-index: 9;
         width: 50%;
         font-size: 20px;
         line-height: 1.5;
@@ -48,12 +48,13 @@ z-index: 1;
             @include easeOut;
             &:hover {
                 color:$primary-color;
+
                 text-shadow: 0 0 10px $pink;
             }
         }
     } 
     .resume {
-        z-index: 10;
+        z-index: 9;
         width: 50%;
         padding: 2rem;
         display:flex;
